Updated FindJobs and App components with routing and structure.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@testing-library/react": "^16.1.0",
+    "@types/testing-library__react": "^10.2.0",
     "autoprefixer": "^10.4.16",
     "framer-motion": "^10.16.16",
     "postcss": "^8.4.32",
@@ -39,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "husky": "^8.0.3"
