--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@testing-library/react": "^16.1.0",
     "@types/testing-library__react": "^10.2.0",
     "autoprefixer": "^10.4.16",
+    "axios": "^1.7.9",
     "framer-motion": "^10.16.16",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.13",
     "tailwindcss": "^3.4.0"
   },
   "scripts": {
