--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.0.18",
     "@testing-library/react": "^16.1.0",
     "@types/testing-library__react": "^10.2.0",
